--- a/greetingcardsummative/greetingcardsummative.csproj
+++ b/greetingcardsummative/greetingcardsummative.csproj
@@ -83,6 +83,15 @@
   <ItemGroup>
     <None Include="Resources\pict--hydra-constellations-except-zodiac,-northern-and-southern---vector-stencils-library.png--diagram-flowchart-example.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\shooting_star-Mike_Koenig-1132888100.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Keyboard Typing Slow-SoundBible.com-531631224.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\aries-constellation_design.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
